--- a/simple_code/pubspec.yaml
+++ b/simple_code/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_code_editor: ^0.3.1
   flutter_highlight: ^0.7.0
   highlight: ^0.7.0
+  file_picker: ^8.0.3
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +51,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.9
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
