--- a/simple_code/pubspec.yaml
+++ b/simple_code/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   highlight: ^0.7.0
   file_picker: ^8.0.3
   json_annotation: ^4.9.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
