--- a/simple_code/pubspec.yaml
+++ b/simple_code/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   file_picker: ^8.0.3
   json_annotation: ^4.9.0
   provider: ^6.1.2
+  yaml: ^3.1.2
 
 dev_dependencies:
   flutter_test:
