--- a/simple_code/pubspec.yaml
+++ b/simple_code/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   xml: ^6.5.0
   flutter_quill: ^9.3.11
   re_editor: ^0.3.0
+  re_highlight: ^0.0.3
 
 dev_dependencies:
   flutter_test:
