--- a/simple_code/pubspec.yaml
+++ b/simple_code/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   yaml: ^3.1.2
   xml: ^6.5.0
   flutter_quill: ^9.3.11
+  quill_html_converter: ^9.3.11
   re_editor: ^0.3.0
   re_highlight: ^0.0.3
 
