feat: make mock http post request

--- a/simple_code/pubspec.yaml
+++ b/simple_code/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   quill_html_converter: ^9.3.11
   re_editor: ^0.3.0
   re_highlight: ^0.0.3
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
