--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -2,11 +2,15 @@ server {
     listen 80;
     listen [::]:80;
 
-    location /server {
+    server_name localhost;
+
+    location /server/ {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_set_header X-NginX-Proxy true;
-        proxy_pass http://server:8080;
+        proxy_pass http://server:8080/;
     }
+
+    root /usr/share/nginx/html;
 }
