--- a/simple-code-backend/src/main/resources/application.yaml
+++ b/simple-code-backend/src/main/resources/application.yaml
@@ -4,6 +4,11 @@ spring:
   docker:
     compose:
       file: jobe-compose.yaml
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
 
 jobe:
   client:
