--- a/simple-code-backend/compose.yaml
+++ b/simple-code-backend/compose.yaml
@@ -1,7 +1,6 @@
 services:
   server:
-    build:
-      context: .
+    build: .
     container_name: server
     depends_on:
       - jobe
@@ -9,6 +8,12 @@ services:
       - course-work
     ports:
       - 8080:8080
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:8080 || exit 1
+      interval: 30s
+      timeout: 5s
+      start_period: 30s
+      retries: 5
 
   jobe:
     image: trampgeek/jobeinabox:latest
