--- a/simple-code-backend/src/main/resources/application.yaml
+++ b/simple-code-backend/src/main/resources/application.yaml
@@ -1,3 +1,11 @@
 spring:
   application:
     name: SimpleCode
+  docker:
+    compose:
+      file: jobe-compose.yaml
+
+jobe:
+  client:
+    timeout: 10s
+    base-url: http://localhost:8081/jobe/index.php/restapi/runs
