--- a/simple-code-backend/src/main/resources/application.yaml
+++ b/simple-code-backend/src/main/resources/application.yaml
@@ -10,6 +10,10 @@ spring:
       max-file-size: 20MB
       max-request-size: 20MB
 
+server:
+  tomcat:
+    max-http-form-post-size: 20MB
+
 application:
   polygon:
     problem:
