--- a/simple-code-flutter/pubspec.yaml
+++ b/simple-code-flutter/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   re_highlight: ^0.0.3
   http: ^1.2.1
   yaml_writer: ^2.0.0
+  http_parser: any
 
 dev_dependencies:
   flutter_test:
