--- a/simple-code-flutter/pubspec.yaml
+++ b/simple-code-flutter/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   http_parser: any
   html_editor_enhanced: ^2.6.0
   pointer_interceptor: ^0.10.1+2
+  flutter_tex: ^4.1.3
 
 dev_dependencies:
   flutter_test:
