--- a/simple-code-flutter/pubspec.yaml
+++ b/simple-code-flutter/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   html_editor_enhanced: ^2.6.0
   pointer_interceptor: ^0.10.1+2
   flutter_tex: ^4.1.3
+  flutter_dropzone: ^4.2.1
 
 dev_dependencies:
   flutter_test:
