--- a/nginx/conf.d/app.conf
+++ b/nginx/conf.d/app.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     listen [::]:80;
 
+    client_max_body_size 20M;
+
     server_name localhost;
 
     location /server/ {
